--- a/hw/Makefile
+++ b/hw/Makefile
@@ -1,10 +1,25 @@
+galdev = -p ATF16V8B
+
+.PHONY: all
+all: decode.jed glue.jed
+
 decode.jed: decode.pld
+
+glue.jed: glue.pld
 
 %.jed: %.pld
 	galasm $<
 #	cat $@ | ./fixjed >fixed.jed
 #	mv fixed.jed $@
 
-.PHONY: program
-program: glue.jed
-	minipro -p ATF16V8B -c config -w $<
+.PHONY: program-decode
+program-decode: decode.jed
+	minipro $(galdev) -c config -w $<
+
+.PHONY: program-glue
+program-glue: glue.jed
+	minipro $(galdev) -c config -w $<
+
+.PHONY: clean
+clean:
+	rm -f decode.jed glue.jed
