schematic progress, split iodecode from glue.pld...

--- a/hw/Makefile
+++ b/hw/Makefile
@@ -1,7 +1,7 @@
 galdev = -p ATF16V8B
 
 .PHONY: all
-all: decode.jed glue.jed
+all: decode.jed iodecode.jed glue.jed
 
 decode.jed: decode.pld
 
@@ -14,12 +14,16 @@ glue.jed: glue.pld
 
 .PHONY: program-decode
 program-decode: decode.jed
-	minipro $(galdev) -c config -w $<
+	minipro -p ATF16V8B -c config -w $<
 
 .PHONY: program-glue
 program-glue: glue.jed
-	minipro $(galdev) -c config -w $<
+	minipro -p ATF16V8B -c config -w $<
+
+.PHONY: program-iodecode
+iodecode-glue: iodecode.jed
+	minipro -p ATF20V8B -c config -w $<
 
 .PHONY: clean
 clean:
-	rm -f decode.jed glue.jed
+	rm -f *.jed
